fixed spacing and margins

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,7 +80,7 @@ li a:hover{
 
 #aboutme{
 	vertical-align:top;
-	text-align: center;
+	text-align: left;
 	height:500px;
 	width: 30%;
 	padding-left: 75px;
@@ -102,12 +102,12 @@ li a:hover{
 
 #info{
 	padding-top: 100px;
-	padding-left: 75px;
+	padding-left: 125px;
 	font-size: 14px;
 	font-family: Futura, Tahoma, sans-serif;
 	vertical-align: top;
 	height:500px;
-	width: 425px;
+	width: 375px;
 	display:inline-block;
 	background-color: #F8F8FF;
 }
